--- a/my-app/src/components/Banner/Banner.css
+++ b/my-app/src/components/Banner/Banner.css
@@ -1,14 +1,15 @@
 .banner {
   background-image: url('../../images/background.png') !important;
-  height: 370px;
-  margin: 0 !important;
-  padding: 0 !important;
-  color: white;
-  font-size: 18px;
+  height: 140px;
+  /* margin: 0 !important; */
+  padding: 20px;
+  color: #788eb3;
+  text-align: center;
+  font-weight: 900;
 }
 
 @media (min-width: 576px) {
   .banner {
-    font-size: calc(10px + 14 * (100vw - 320px) / 800);
+    font-size: xx-large;
   }
 }
