--- a/my-app/src/components/Container/Container.css
+++ b/my-app/src/components/Container/Container.css
@@ -1,14 +1,16 @@
 .container {
   margin-top: 40px;
   margin-bottom: 40px;
+  display: inline-flex;
+  flex-wrap: wrap;
 }
 
 @media (min-width: 1100px) {
   .container {
-    padding: 0 100px;
+    padding: 0 250px;
     width: 1100px;
   }
-}
+} 
 
 .container {
   transform: translate3d(0, 0, 0);
